# Whisp

./: .gitignore  Features.md  README.md  io.github.tanaybhomia.Whisp.yml  meson.build
.github/workflows/: ci.yml
data/: com.example.Nota.desktop.in  com.example.Nota.metainfo.xml  com.example.Whisp.desktop.in  io.github.tanaybhomia.Whisp.metainfo.xml  meson.build
docs/: index.html  manual.html
docs/css/: style.css
src/: meson.build  nota.in  whisp.in
src/whisp/: config.py  editor.py  highlighter.py  main.py  text_search.py  window.py
